@@ -122,8 +122,14 @@ function InitControls()
   MangAdmin:PrepareScript(ma_learnlangbutton      , Locale["tt_learnlangbutton"]    , function() LearnSpell(UIDropDownMenu_GetSelectedValue(ma_learnlangdropdown)) end)
   MangAdmin:PrepareScript(ma_modifybutton         , Locale["tt_modifybutton"]       , function() Modify(UIDropDownMenu_GetSelectedValue(ma_modifydropdown),ma_modifyeditbox:GetText()) end)
   MangAdmin:PrepareScript(ma_resetbutton          , Locale["tt_resetbutton"]        , function() Reset(UIDropDownMenu_GetSelectedValue(ma_resetdropdown)) end)
-  MangAdmin:PrepareScript(ma_modelzoominbutton    , Locale["tt_modelzoominbutton"]        , function() CharModelZoomIn() end)
-  MangAdmin:PrepareScript(ma_modelzoomoutbutton   , Locale["tt_modelzoomoutbutton"]        , function() CharModelZoomOut() end)
+  MangAdmin:PrepareScript(ma_modelzoominbutton    , Locale["tt_modelzoominbutton"]  , function() CharModelZoomIn() end)
+  MangAdmin:PrepareScript(ma_modelzoomoutbutton   , Locale["tt_modelzoomoutbutton"] , function() CharModelZoomOut() end)
+  MangAdmin:PrepareScript(ma_charbindsight        , Locale["tt_charbindsight"]      , function() CharBindSight() end)
+  MangAdmin:PrepareScript(ma_charunbindsight      , Locale["tt_charunbindsight"]    , function() CharUnBindSight() end)
+  MangAdmin:PrepareScript(ma_charrenamebutton     , Locale["tt_charrename"]         , function() CharRename() end)
+  MangAdmin:PrepareScript(ma_charcustomizebutton  , Locale["tt_charcustomize"]      , function() CharCustomize() end)
+  MangAdmin:PrepareScript(ma_charchangeracebutton , Locale["tt_charchangerace"]     , function() CharChangeRace() end)
+  MangAdmin:PrepareScript(ma_charchangefactionbutton, Locale["tt_charchnagefaction"], function() CharChangeFaction() end)
   
   
   LearnLangDropDownInitialize()
@@ -210,6 +216,8 @@ function InitControls()
   MangAdmin:PrepareScript(ma_npcID_DOWNbutton     , Locale["tt_IDDown"]             , function() ID_DOWN() end)
   MangAdmin:PrepareScript(ma_npcmodelzoominbutton , Locale["tt_npcmodelzoominbutton"], function() NPCModelZoomIn() end)
   MangAdmin:PrepareScript(ma_npcmodelzoomoutbutton, Locale["tt_npcmodelzoomoutbutton"], function() NPCModelZoomOut() end)
+  MangAdmin:PrepareScript(ma_npcbindsight         , Locale["tt_npcbindsight"]        , function() NPCBindSight() end)
+  MangAdmin:PrepareScript(ma_npcunbindsight       , Locale["tt_npcunbindsight"]      , function() NPCUnBindSight() end)
   
 --[[Gob Tab]]
   MangAdmin:PrepareScript(ma_objgobutton          , Locale["tt_ObjGo"]              , function() OBJGo() end)
